# clikit

./: .appveyor.yml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: push.yml
src/clikit/: __init__.py  console_application.py
src/clikit/adapter/: style_converter.py
src/clikit/api/: exceptions.py
src/clikit/api/application/: application.py
src/clikit/api/args/: __init__.py  args.py  args_parser.py  exceptions.py  raw_args.py
src/clikit/api/command/: __init__.py  command.py  command_collection.py  exceptions.py
src/clikit/api/config/: __init__.py  application_config.py  command_config.py  config.py
src/clikit/api/event/: __init__.py  config_event.py  console_events.py  event.py  event_dispatcher.py  pre_handle_event.py  pre_resolve_event.py
src/clikit/api/formatter/: __init__.py  formatter.py  style.py  style_set.py
src/clikit/api/io/: __init__.py  flags.py  indent.py  input.py  input_stream.py  io.py  io_exception.py  output.py  output_stream.py  section_output.py
src/clikit/api/resolver/: __init__.py  command_resolver.py  exceptions.py  resolved_command.py
src/clikit/args/: __init__.py  argv_args.py  default_args_parser.py  string_args.py  token_parser.py
src/clikit/config/: __init__.py  default_application_config.py
src/clikit/formatter/: __init__.py  ansi_formatter.py  default_style_set.py  null_formatter.py  plain_formatter.py
src/clikit/handler/: callback_handler.py
src/clikit/handler/help/: __init__.py  help_handler.py  help_text_handler.py
src/clikit/io/: __init__.py  buffered_io.py  console_io.py  null_io.py
src/clikit/io/input_stream/: __init__.py  null_input_stream.py  standard_input_stream.py  stream_input_stream.py  string_input_stream.py
src/clikit/io/output_stream/: __init__.py  buffered_output_stream.py  error_output_stream.py  null_output_stream.py  standard_output_stream.py  stream_output_stream.py
src/clikit/resolver/: __init__.py  default_resolver.py  help_resolver.py  resolve_result.py
src/clikit/ui/: __init__.py  component.py  rectangle.py
src/clikit/ui/alignment/: __init__.py  label_alignment.py
src/clikit/ui/components/: __init__.py  border_util.py  cell_wrapper.py  choice_question.py  confirmation_question.py  empty_line.py  exception_trace.py  labeled_paragraph.py  name_version.py  paragraph.py  progress_bar.py  progress_indicator.py  question.py  table.py
src/clikit/utils/: _compat.py  command.py  string.py  terminal.py  time.py
tests/: conftest.py  test_console_aplication.py
tests/api/event/: test_event.py  test_event_dispatcher.py
tests/api/io/: test_output.py  test_section_output.py
tests/args/: test_argv_args.py  test_default_args_parser.py  test_string_args.py
tests/handler/help/: test_help_option.py  test_help_text_handler.py
tests/io/output_stream/: test_buffered_output_stream.py  test_stream_output_stream.py
tests/ui/components/: test_choice_question.py  test_confirmation_question.py  test_exception_trace.py  test_progress_bar.py  test_progress_indicator.py  test_question.py  test_table.py
tests/ui/help/: test_application_help.py  test_command_help.py
tests/utils/: test_command.py  test_terminal.py
(+21 files in other folders)
