[tool.poetry]
name = "clikit"
version = "0.2.0"
description = "CliKit is a group of utilities to build beautiful and testable command line interfaces."
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

license = "MIT"

readme = "README.md"

repository = "https://github.com/sdispater/clikit"

keywords = ["packaging", "dependency", "poetry"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
pastel = "^0.1.0"
pylev = "^1.3"

# The typing module is not in the stdlib in Python 2.7 and 3.4
typing = { version = "^3.6", python = "~2.7 || ~3.4" }

# enum34 is needed for Python 2.7
enum34 = { version = "^1.1", python = "~2.7" }

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.6"
tox = "^3.5"
pre-commit = "^1.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
