[tool.poetry]
name = "clikit"
version = "0.5.1"
description = "CliKit is a group of utilities to build beautiful and testable command line interfaces."
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sdispater/clikit"
keywords = ["packaging", "dependency", "poetry"]

packages = [
    {include = "clikit", from = "src"},
    # This trips up pip when installing in editable mode
    # so until it's fixed in Poetry we have to comment
    # {include = "tests", format = "sdist"}
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
pastel = "^0.2.0"
pylev = "^1.3"

# Woops is only needed for Python ^3.6 to provide
# better error messsages
woops = { version = "^0.2.1", python = "^3.6" }

# The typing module is not in the stdlib in Python 2.7 and 3.4
typing = { version = "^3.6", python = "~2.7 || ~3.4" }
typing-extensions = { version = "^3.6", python = ">=3.5.0,<3.5.4" }

# enum34 is needed for Python 2.7
enum34 = { version = "^1.1", python = "~2.7" }

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.6"
tox = "^3.5"
pre-commit = "^1.12"
pytest-mock = "^2.0.0"

[build-system]
requires = ["poetry_core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
